frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: frontend
            port: 
              number: 8080
